--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,3 +3,5 @@ $dark-chocolate: #21211b;
 $albatre: #f6f5ee;
 $bistre: #807f3f;
 $bistre-hover: #989863;
+$ff-kulim: "Kulim Park", sans-serif;
+$ff-butler: "Butler-extra-bold" serif;
