add review block and move navbar to components

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,4 +4,4 @@ $albatre: #f6f5ee;
 $bistre: #807f3f;
 $bistre-hover: #989863;
 $ff-kulim: "Kulim Park", sans-serif;
-$ff-butler: "Butler-extra-bold" serif;
+$ff-butler: "Butler-extra-bold", serif;
