add concept module

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,3 +5,4 @@ $bistre: #807f3f;
 $bistre-hover: #989863;
 $ff-kulim: "Kulim Park", sans-serif;
 $ff-butler: "Butler-extra-bold", serif;
+$ff-butler-medium: "Butler-medium", serif;
