--- a/src/styles/commons.scss
+++ b/src/styles/commons.scss
@@ -5,32 +5,42 @@
   src: url("../assets/typo/Butler_ExtraBold.otf");
 }
 
+@font-face {
+  font-family: "Butler-medium";
+  src: url("../assets/typo/Butler_Medium.otf");
+}
+
 body {
   background-color: $albatre;
   font-family: $ff-kulim;
 }
 p {
-  font-family: $ff-kulim;
+  line-height: 20px;
+  font-weight: 300;
 }
 
 h1 {
   font-size: 55px;
+  line-height: 63px;
   font-family: $ff-butler;
 }
 
 h2 {
   font-size: 40px;
+  line-height: 48px;
   font-family: $ff-butler;
 }
 
 h3 {
   font-size: 24px;
+  line-height: 27px;
   font-family: $ff-kulim;
   font-weight: 600;
 }
 
 h4 {
   font-size: 32px;
+  line-height: 38px;
   font-family: $ff-butler;
 }
 
