--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,7 @@ $olive: #596d32;
 $dark-chocolate: #21211b;
 $albatre: #f6f5ee;
 $bistre: #807f3f;
+$bistre-clair: #e4e4be;
 $olive-les: #849765;
 $bistre-hover: #989863;
 $bistre-clair: #e4e4be;
