--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@ $dark-chocolate: #21211b;
 $albatre: #f6f5ee;
 $bistre: #807f3f;
 $bistre-hover: #989863;
+$bistre-clair: #e4e4be;
 $ff-kulim: "Kulim Park", sans-serif;
 $ff-butler: "Butler-extra-bold", serif;
 $ff-butler-medium: "Butler-medium", serif;
