--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@ $albatre: #f6f5ee;
 $bistre: #807f3f;
 $bistre-hover: #989863;
 $bistre-clair: #e4e4be;
+$secondary-button-hover: #efeee0;
 $ff-kulim: "Kulim Park", sans-serif;
 $ff-butler: "Butler-extra-bold", serif;
 $ff-butler-medium: "Butler-medium", serif;
