--- a/src/styles/commons.scss
+++ b/src/styles/commons.scss
@@ -27,7 +27,6 @@ body {
 }
 p {
   line-height: 20px;
-  font-weight: 300;
 }
 
 h1 {
@@ -68,7 +67,8 @@ button {
   }
   &:hover {
     background-color: $bistre-hover;
-    padding: 18px 24px 18px 24px;
+    transform: scale(0.95);
+    transition: 0.6s ease;
   }
 }
 
