--- a/src/styles/commons.scss
+++ b/src/styles/commons.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Kulim+Park:wght@300;400;600&display=swap");
+$fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @font-face {
